--- a/patching/asm/layouts_linked.yaml
+++ b/patching/asm/layouts_linked.yaml
@@ -56,7 +56,7 @@
     ; db 00,39,20,63,f1 # closed chest on intro screen
     db 00,6b,00,42,3a # removed tree in yoll graveyard
     db 00,6b,02,42,ce # not removed tree in yoll graveyard
-    db 00,83,00,43,a4 # rock outside D2
+    db 00,83,00,43,cd # path outside d2 present
     db 03,0f,00,66,f9 # water in d6 past entrance
     db 01,13,00,61,d7 # portal in symmetry city past
     db 01,13,00,68,d7 # portal in symmetry city past
