Working on black tower present princess zelda rescue check. Item sprites won't show up in link's invetory for all new checks that I've added, so I am very sure that I'm missing something.

--- a/patching/asm/misc.yaml
+++ b/patching/asm/misc.yaml
@@ -178,6 +178,10 @@
     ret
 
 00//handleSpecialExits: |
+    # /ifdef option.secretLocationsEnabled
+    # call makeHerosCaveExit
+    # call makeHerosCaveEntrance
+    # /endif
     ld (wWarpDestRoom),a
     push bc
     push hl
@@ -187,6 +191,16 @@
     pop hl
     pop bc
     ret
+
+# 04//makeHerosCaveEntrance: |
+  # ld a,(wWarpDestRoom)
+  # cp $ce
+  # ret nz
+  # ld a,(wWarpDestGroup)
+  # cp $04
+  # ret nz
+  # ld a,($c94ce) ; room flags for heros cave exit
+  # ret
 
 04/45e8/: call handleSpecialExits
 0a/4738/: call handleSpecialExits
