--- a/patching/asm/layouts.yaml
+++ b/patching/asm/layouts.yaml
@@ -47,6 +47,14 @@
 
 # data for applyAllTileSubstitutions: group,room,flags,yx,tile
 04//tileSubTable: |
+    /ifdef option.secretLocationsEnabled
+    db 01,c7,00,48,d0 # add stair tile in sea of storms past to allow players to time travel to the present sea of storms.
+    db 03,c7,00,48,2c # add statue in sea of storms past underwater prevent players from resurfacing on that area.
+    # add two walkable tiles in black tower present entrance (maybe for a hero's cave concept since you can't get anything from rescuing princess zelda in the linked game)
+    db 00,76,00,54,a7
+    db 00,76,00,55,a7
+    # end tile adding for black tower entrance present
+    /endif
     db 00,20,00,61,d7 # portal in talus peaks
     db 01,48,00,45,d7 # portal south of past maku tree
     db 00,37,02,43,d7 # portal in southeast ricky/moosh nuun
@@ -73,7 +81,6 @@
     db 01,a5,00,35,48 # ledge by library past
     db 01,a5,00,45,0b # cont.
     db 01,a5,00,55,6c # cont.
-    db 00,83,00,44,d7 # portal outside D2 present
     db 01,48,02,31,cd # past maku road: remove dirt when exiting
     db ff
 
