Revert "I'm getting the right idea for how warps work in the oracles randomizer, I just need to make it so that we can enter hero's cave using the deku tree present stairs. They don't have a benefit if you can access lynna city without going through maku path."
This reverts commit 8100204febb25d654834fdc898ab370d3906fd5c.

--- a/patching/asm/misc.yaml
+++ b/patching/asm/misc.yaml
@@ -180,7 +180,7 @@
 00//handleSpecialExits: |
     # /ifdef option.secretLocationsEnabled
     # call makeHerosCaveExit
-    call makeHerosCaveEntrance
+    # call makeHerosCaveEntrance
     # /endif
     ld (wWarpDestRoom),a
     push bc
@@ -192,17 +192,14 @@
     pop bc
     ret
 
-04//makeHerosCaveEntrance: |
-    ld a,($c783)
-    ld (wWarpDestGroup),a
-    ld a,$ce        ; Starting room ID
-    ld (wWarpDestRoom),a
-    ld a,$ff        ; Position in starting room
-    ld (wWarpDestPos),a
-    ld a,$03                        ; TRANSITION_DEST_ENTERSCREEN
-    ld (wWarpTransition),a
-    ld a,$04                        ; TRANSITION_SRC_INSTANT
-    ld (wWarpTransition2),a
+# 04//makeHerosCaveEntrance: |
+  # ld a,(wWarpDestRoom)
+  # cp $ce
+  # ret nz
+  # ld a,(wWarpDestGroup)
+  # cp $04
+  # ret nz
+  # ld a,($c94ce) ; room flags for heros cave exit
   # ret
 
 04/45e8/: call handleSpecialExits
