--- a/patching/asm/warp_to_start.yaml
+++ b/patching/asm/warp_to_start.yaml
@@ -1,16 +1,43 @@
-#02//checkTreeVisited: |
-#    cp STARTING_TREE_MAP_INDEX
-#    jp nz,$6560     ; _mapMenu_checkRoomVisited
-#    or a
-#    ret
-#02/5ec8/: call checkTreeVisited
-#02/65e1/: call checkTreeVisited
-
+02//checkTreeVisited: |
+    cp STARTING_TREE_MAP_INDEX
+    jp nz,$6560     ; _mapMenu_checkRoomVisited
+    or a
+    ret
+02/5ec8/: call checkTreeVisited
+02/65e1/: call checkTreeVisited
 # always treat starting seed tree as visited for warping purposes.
-#02//checkCursorVisited: |
-#    ld a,(wMapMenuCursorIndex)
-#    jp checkTreeVisited
-#02/609b/: call checkCursorVisited
+02//checkCursorVisited: |
+    ld a,(wMapMenu_cursorIndex)
+    jp checkTreeVisited
+02/609b/: call checkCursorVisited
+
+02//treeWarp: |
+      /ifdef option.secretLocationsEnabled
+      ld a,(wKeysPressed)
+      and $08
+      jr z,@done
+      ld a,(wAreaFlags)
+      and AREAFLAG_OUTDOORS
+      jr nz,@warp
+      ld a,SND_ERROR
+      jp playSound
+      @warp:
+      ld hl,wWarpDestGroup
+      ld (hl),$80
+      inc hl
+      ld (hl),$78
+      ld l,$4a
+      ld (hl),$55
+      call $5fbf
+      @done:
+      jp $4fba
+      /endif
+
+02/5ff9/: call checkTreeVisited
+02/6133/: call nz,treeWarp
+02/618b/: call nz,treeWarp
+02/619d/: call checkCursorVisited
+02/66a9/: call checkTreeVisited
 
 # warp to start location if holding start when opening the map screen.
 02//checkWarpToStart: |
@@ -26,7 +53,7 @@
     ld (wWarpDestRoom),a
     ld a,option.startingPos         ; Position in starting room
     ld (wWarpDestPos),a
-    ld a,$05                        ; TRANSITION_DEST_FALL
+    ld a,option.destTransittion                        ; TRANSITION_DEST_FALL
     ld (wWarpTransition),a
     ld a,$03
     ld (wWarpTransition2),a
