Didn't realize at the time that the bridge carpenter guy didn't work. Built a bridge for the player who has secret locations enabled.

--- a/patching/asm/layouts.yaml
+++ b/patching/asm/layouts.yaml
@@ -48,8 +48,14 @@
 # data for applyAllTileSubstitutions: group,room,flags,yx,tile
 04//tileSubTable: |
     /ifdef option.secretLocationsEnabled
-    # add two walkable tiles in black tower present entrance (maybe for a hero's cave concept since you can't get anything from rescuing princess zelda in the linked game)
-    db 00,76,00,54,a7
+    # build symmetry city bridge if seret locations is enabled
+    db 00,25,00,52,1d
+    db 00,25,00,51,1d
+    db 00,25,00,50,1d
+    db 00,25,00,62,1e
+    db 00,25,00,61,1e
+    db 00,25,00,60,1e
+    # add walkable tiles to black tower present entrance
     db 00,76,00,55,a7
     # end tile adding for black tower entrance present
     /endif
