--- a/patching/asm/static_items.yaml
+++ b/patching/asm/static_items.yaml
@@ -32,7 +32,6 @@
   # ------- Hero's Cave items -------
   /ifdef option.secretLocationsEnabled
   dwbe $04cd, locations.herosCaveStatue3Puzzle
-  dwbe $06c0, locations.herosCaveBasement
   /endif
 
 
@@ -91,6 +90,21 @@
   call createTreasure       ; spawn it
   call objectCopyPosition   ; move it
   jp interactionDelete
+
+28/702f/: | # Replacing red rupee in hero's cave basement with a static item.
+  ld a,(wActiveRoom)
+  cp $c0
+  jp nz,interactionDelete
+  
+  call getThisRoomFlags
+  bit 7,(hl)
+  jp nz,interactionDelete
+
+  ld bc, locations.herosCaveBasement ; Set the item as a gift
+  call createTreasure       ; spawn it
+  call objectCopyPosition   ; move it
+  jp interactionDelete
+
 
   
 ###################################################################################################################
