Zelda now gives you a randomized item once you rescue her from black tower present.

--- a/patching/asm/conditional/secret_locations.yaml
+++ b/patching/asm/conditional/secret_locations.yaml
@@ -14,6 +14,11 @@
   @delete:
   jp interactionDelete
 
+# Give a randomized item to link after he rescues zelda from black tower in the present.
+15/7755/: |
+  ld bc,locations.zeldaRescue
+  jp spawnTreasureOnLink
+
 # GLOBALFLAG_DONE_PLEN_SECRET
 # Replace game finished check by setting the flag saying the code has been inputted, for now
 0f/7ad5/: |
