--- a/patching/asm/conditional/secret_locations.yaml
+++ b/patching/asm/conditional/secret_locations.yaml
@@ -18,3 +18,12 @@
 15/7755/: |
   ld bc,locations.zeldaRescue
   jp spawnTreasureOnLink
+
+# GLOBALFLAG_DONE_PLEN_SECRET
+# Replace game finished check by setting the flag saying the code has been inputted, for now
+0f/7ad5/: |
+  ld a,$67
+  call setGlobalFlag
+  nop
+  nop
+  nop
