added warp to start location option and merged more with common

--- a/patching/asm/conditional/secret_locations.yaml
+++ b/patching/asm/conditional/secret_locations.yaml
@@ -1,20 +1,4 @@
-# Open Hero's Cave Entrance
-04/6353/: db $f1
-
-# Remove red rupee from hero's cave basement
-0a/7392/: |
-  call getThisRoomFlags
-  and $20
-  jr nz,@delete
-
-  ld bc,locations.herosCaveBasement
-  call createTreasure
-  call objectCopyPosition
-  jr nz,@delete
-  @delete:
-  jp interactionDelete
-
-# Give a randomized item to link after he rescues zelda from black tower in the present.
+# Gives a randomized item to link after he rescues zelda from black tower in the present.
 15/7755/: |
   ld bc,locations.zeldaRescue
   jp spawnTreasureOnLink
