--- a/patching/asm/layouts.yaml
+++ b/patching/asm/layouts.yaml
@@ -62,7 +62,7 @@
     ; db $00,$39,$20,$63,$f1 # closed chest on intro screen
     db $00,$6b,$00,$42,$3a # removed tree in yoll graveyard
     db $00,$6b,$02,$42,$ce # not removed tree in yoll graveyard
-    db $00,$83,$00,$43,$a4 # rock outside D2
+    db $00,$83,$00,$43,$3a # path outside D2 present
     db $03,$0f,$00,$66,$f9 # water in d6 past entrance
     db $01,$13,$00,$61,$d7 # portal in symmetry city past
     db $01,$13,$00,$68,$d7 # portal in symmetry city past
@@ -77,7 +77,6 @@
     db $01,$2c,$00,$70,$69 # ledge in rolling ridge east past
     db $01,$2c,$00,$71,$06 # cont.
     db $01,$2c,$00,$72,$67 # cont.
-    db $00,$a9,$00,$67,$f2 # portal sign on crescent island
     db $01,$a5,$00,$35,$48 # ledge by library past
     db $01,$a5,$00,$45,$0b # cont.
     db $01,$a5,$00,$55,$6c # cont.
