--- a/patching/asm/warp_to_start.yaml
+++ b/patching/asm/warp_to_start.yaml
@@ -12,9 +12,9 @@
     ld (wWarpDestRoom),a
     ld a,option.warpingPos         ; Position in warping room
     ld (wWarpDestPos),a
-    ld a,option.destTransittion                        ; TRANSITION_DEST_FALL
+    ld a,option.warpingDestTransittion
     ld (wWarpTransition),a
-    ld a,$03
+    ld a,option.warpingSrcTransittion
     ld (wWarpTransition2),a
     ld a,$ff
     ld (wDisabledObjects),a
